@@ -7,10 +7,10 @@
 struct document_view;
 
 extern const JSClass history_class;
-extern const JSFunctionSpec history_funcs[];
+extern const spidermonkeyFunctionSpec history_funcs[];
 
 extern const JSClass location_class;
-extern const JSFunctionSpec location_funcs[];
+extern const spidermonkeyFunctionSpec location_funcs[];
 extern const JSPropertySpec location_props[];
 
 void location_goto(struct document_view *doc_view, unsigned char *url);
