@@ -99,4 +99,29 @@ jsval_to_string(JSContext *ctx, jsval *vp)
 	return empty_string_or_(JS_GetStringBytes(JS_ValueToString(ctx, val)));
 }
 
+/** An ELinks-specific replacement for JSFunctionSpec.
+ *
+ * Bug 1016: In SpiderMonkey 1.7 bundled with XULRunner 1.8, jsapi.h
+ * defines JSFunctionSpec in different ways depending on whether
+ * MOZILLA_1_8_BRANCH is defined, and there is no obvious way for
+ * ELinks to check whether MOZILLA_1_8_BRANCH was defined when the
+ * library was built.  Avoid the unstable JSFunctionSpec definitions
+ * and use this ELinks-specific structure instead.  */
+typedef struct spidermonkeyFunctionSpec {
+	const char *name;
+	JSNative call;
+	uint8 nargs;
+	/* ELinks does not use "flags" and "extra" so omit them here.  */
+} spidermonkeyFunctionSpec;
+
+JSBool spidermonkey_DefineFunctions(JSContext *cx, JSObject *obj,
+				    const spidermonkeyFunctionSpec *fs);
+JSObject *spidermonkey_InitClass(JSContext *cx, JSObject *obj,
+				 JSObject *parent_proto, JSClass *clasp,
+				 JSNative constructor, uintN nargs,
+				 JSPropertySpec *ps,
+				 const spidermonkeyFunctionSpec *fs,
+				 JSPropertySpec *static_ps,
+				 const spidermonkeyFunctionSpec *static_fs);
+
 #endif
